      (iss #450).
    * TokenRequest.parse must reject requests with a scope parameter that isn't
      allowed according to the grant type with an invalid_request error (iss
      #450).

version 11.7.1 (2023-12-08)
    * TokenRequest.parse must ignore the scope parameter when it is not allowed
      by the grant type. In version 11.7 TokenRequest introduced strict
      checking which breaks requests with non-compliant clients (iss #452).
    * Updates to net.minidev:json-smart:2.5.0
    * Updates com.nimbusds:nimbus-jose-jwt:9.37.3
    * Updates to com.google.crypto.tink:tink:1.12.0
    * Updates to BouncyCastle 1.77

version 11.7.2 (2023-12-14)
    * AccessTokenUtils.parseValueFromHeader, as invoked by AccessToken.parse
      and other classes, must handle the token type in a case-insensitive
      manner (iss #453).

version 11.8 (2023-12-14)
    * Removes the deprecated RPMetadataPolicyFactory and its package.

version 11.9 (2023-12-27)
    * Adds a Token.getCustomParameters() method to include additional custom
      parameters in tokens. AccessToken and RefreshToken instances will include
      them in getParameterNames() and toJSONObject().

version 11.9.1 (2024-01-06)
    * URLUtils.parseParameters must ignore illegally encoded keys and values,
      rather than throw unchecked IllegalArgumentException instances produced
      by java.net.URLDecoder.decode (iss #455).

version 11.10 (2024-02-18)
    * Adds OAuth 2.0 Rich Authorization Requests (RAR) (RFC 9396) support to
      CIBARequest.

version 11.10.1 (2024-02-26)
    * Fixes an HTTPRequest.closeStreams bug that generated an unnecessary
      java.net.ProtocolException "Cannot write output after reading input."
      (iss #458).

version 11.10.2 (2024-05-10)
    * Updates to Nimbus JOSE+JWT 9.39
    * Updates to JSON Smart 2.5.1
    * Updates to Tink 1.13.0
    * Updates to BouncyCastle 1.78
    * Updates tests from Java 11 to Java 17 runtime.