@@ -2407,6 +2407,8 @@ version 11.10.1 (2024-02-26)
       (iss #458).
 
 version 11.10.2 (2024-05-10)
+    * IDTokenClaimsSet.hasRequiredClaims should use ResponseType constants (iss
+      #466).
     * Updates to Nimbus JOSE+JWT 9.39
     * Updates to JSON Smart 2.5.1
     * Updates to Tink 1.13.0
